Bug 617220 - Add 3DVision stereoscopic rendering support to D3D10 layers.  r=bas.schouten r=vlad a=roc a=vlad